--- a/kesedes/index.html
+++ b/kesedes/index.html
@@ -5,20 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <script src="index.js"></script>
+    <link rel="shortcut icon" href="images/code_blockers_favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
+       
         <img src="images/code_blockers_logo_header.png" alt="">
     </header>
 
-    <div class="box">
-
+    <div class="box">  
         <div class="gerador">
-            <input type="number" id="comprimento" value="12">
+            <label id="CaioLindo" for="comprimento">Insira a quantidade de caracteres</label>
+            <input type="number" id="comprimento" value="" placeholder="Número de caracteres">
             <button onclick="gerarSenha()">Gerar Senha</button>
-            <input type="text" id="senhaGerada" readonly>
+            <input type="text" id="senhaGerada" readonly placeholder="Sua senha aparece aqui">
         </div>
-
     </div>
 
     <footer>
